NodeSecret optimize startup time | #13